fix(design): enhance alignment

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,10 +2,6 @@
 
 .header {
 
-    .section-1 {
-        height: max-content;
-    }
-
     .section-2 {
         color: $font-primary-color ;
     }
